# tk19_voice

./: CMakeLists.txt  package.xml
Robot/cmd/: saywords
launch/: voicepub.launch
src/: xf_asr.cpp  xf_tts.cpp
